@@ -4,6 +4,8 @@
    Andrew Bartlett <abartlet@pcug.org.au>
  - (djm) Move PAM session initialisation until after fork in sshd. Patch 
    from Nalin Dahyabhai <nalin@redhat.com>
+ - (bal) Missing function prototype in bsd-snprintf.c patch by
+   Mark Miller <markm@swoon.net>
 
 20010213
  - (djm) Only test -S potential EGD sockets if they exist and are readable.
@@ -3920,4 +3922,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.756 2001/02/13 13:45:51 djm Exp $
+$Id: ChangeLog,v 1.757 2001/02/13 14:05:59 mouring Exp $
